--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - mynetwork
 
   app:
-    image: teste3
+    image: rafael-dosso-miclab
     depends_on:
       - api
     networks:
