--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,11 +3,14 @@ services:
     image: jodogne/orthanc 
     ports:
       - "8042:8042"
+    volumes:
+      - ./orthanc_config.json:/etc/orthanc/orthanc.json:ro
     networks:
       - mynetwork
 
   app:
     image: analise-imagens-medicas
+    command: ["python", "src/main.py", "http://api:8042"]
     depends_on:
       - api
     networks:
